--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "main": "src/index.js",
   "types": "types/index.d.ts",
-  "repository": "https://github.com/nuxt-community/nuxt-i18n",
+  "repository": "https://github.com/m7rlin/nuxt-i18n",
   "homepage": "https://nuxt-community.github.io/nuxt-i18n/",
   "bugs": {
     "url": "https://nuxtjs.cmty.io/nuxt-community/nuxt-i18n/issues"
